fix section spacing (#1238)

--- a/themes/kat/_index.scss
+++ b/themes/kat/_index.scss
@@ -28,8 +28,11 @@ and spacing sets */
   $theme-name: "kat",
 
   // article
-  $article-content-wrapper-gap: spacing.$spacing-100,
   $article-gap: spacing.$spacing-200,
+
+  // article content wrapper
+  $article-content-wrapper-max-width: 90rem,
+  $article-content-wrapper-gap: spacing.$spacing-200,
 
   // avatar
   $avatar-font-weight: bold,
@@ -274,6 +277,10 @@ and spacing sets */
   $header-content-wrapper-width: 100%,
 
   // hero
+  $hero-max-width: calc(100% + 8rem),
+  $hero-width: calc(100% + 8rem),
+  $hero-margin: -4rem 0 0 -4rem,
+  $hero-height: 25rem,
   $hero-border-radius: 0,
   $hero-font-size: body-text.$body-text-l,
   $hero-background-color: color-scheme.$violet-200,
@@ -311,8 +318,16 @@ and spacing sets */
   $logo-img-padding: 0.25rem 0.5rem,
   $logo-img-border-radius: border-radii.$border-radius-s,
 
+  // main
+  $main-padding-top: spacing.$spacing-400,
+  $main-padding-right: spacing.$spacing-400,
+  $main-padding-bottom: spacing.$spacing-400,
+  $main-padding-left: spacing.$spacing-400,
+  $main-gap: spacing.$spacing-400,
+
   // nav
   $navigation-link-text-decoration: none,
+  $navigation-list-padding: 0,
 
   // notification
   $notification-padding-top: spacing.$spacing-100,
@@ -364,21 +379,18 @@ and spacing sets */
   $notification-system-text-color: semantic.$color-text-default,
   $notification-system-border-color: color-scheme.$black-05,
 
+  // pagetitle
+  $page-title-max-width: 90rem,
+  $page-title-margin: 0 auto,
+  $page-title-width: 100%,
+
   // section
-  $section-padding-top: spacing.$spacing-100,
-  $section-padding-right: 0,
-  $section-padding-bottom: spacing.$spacing-100,
-  $section-padding-left: 0,
   $section-gap: spacing.$spacing-100,
-  $section-flex-direction: column,
+  $section-max-width: 100%,
 
   // section content wrapper
   $section-content-wrapper-background-color: color-scheme.$white,
-  $section-content-wrapper-padding-top: spacing.$spacing-200,
-  $section-content-wrapper-padding-right: 0,
-  $section-content-wrapper-padding-bottom: spacing.$spacing-300,
-  $section-content-wrapper-padding-left: 0,
-  $section-content-wrapper-gap: spacing.$spacing-250,
+  $section-content-wrapper-gap: spacing.$spacing-200,
   $section-content-wrapper-flex-direction: column,
   $section-content-wrapper-border-radius: border-radii.$border-radius-m,
   $section-content-wrapper-max-width: 90rem,
